# EzOps

./: .gitignore  Dockerfile  EzOps.md  Passos.md  README.md  To-Test.md  docker-compose.yml  main.tf  pyproject.toml
backend/: pyproject.toml
backend/src/api/: aws_service.py  docker_service.py  main.py
dashboard/: package-lock.json  package.json
dashboard/src/app/: layout.tsx  page.tsx
dashboard/src/app/containers/: page.tsx
dashboard/src/app/logs/: page.tsx
dashboard/src/app/secrets/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/layout/: sidebar.tsx  topbar.tsx
src/ezops/: main.py
src/ezops/analyzer/: __init__.py  engine.py  models.py
src/ezops/generator/: __init__.py  engine.py  iac_generator.py
tests/: test_analyzer.py  test_generator.py
