[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezops-backend"
version = "0.1.0"
description = "EzOps Fastapi Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "docker>=6.1.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
