[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ezops-backend"
version = "0.1.0"
description = "EzOps Fastapi Backend"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "docker>=6.1.3",
    "boto3>=1.28.0",
    "google-auth>=2.23.0",
    "azure-identity>=1.14.0",
    "azure-mgmt-resource>=23.0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/api"]
